cours19-ingress/deploy/deployment-node2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node2-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node2
  template:
    metadata:
      labels:
        app: node2
    spec:
      containers:
        - name: node2

          ### Version locale Docker Desktop
          # Utiliser la dernière image locale buildée
          # image: node2:latest
          # imagePullPolicy: Never

          ### Version GKE
          # Utiliser un tag spécifique du Artifact Registry
          # Forcer le téléchargement de l'image afin d'éviter d'utiliser des mauvaises images
          image: us-east1-docker.pkg.dev/h25-4d4-24/test-repo/node2:1.0 # TODO: Remplacer avec le chemin de votre image
          imagePullPolicy: Always

          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: node2-service
spec:
  selector:
    app: node2
  # type: NodePort
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      # nodePort: 30002
